提交分类修改

--- a/source/_posts/数组中出现次数超过一半的数字.md
+++ b/source/_posts/数组中出现次数超过一半的数字.md
@@ -2,7 +2,7 @@
 title: 数组中出现次数超过一半的数字
 date: 2017-03-19 09:47:31
 tags: [算法]
-categroies: 算法
+categories: 算法
 ---
 # 题目描述
 &emsp;&emsp;数组中有一个数字出现的次数超过数组长度的一半，请找出这个数字。例如输入一个长度为9的数组{1,2,3,2,2,2,5,4,2}。由于数字2在数组中出现了5次，超过数组长度的一半，因此输出2。如果不存在则输出0。
