--- a/source/_posts/求二叉树的深度.md
+++ b/source/_posts/求二叉树的深度.md
@@ -2,7 +2,7 @@
 title: 求二叉树的深度
 date: 2017-03-21 11:46:41
 tags: [算法,二叉树]
-categroies: 算法
+categories: 算法
 ---
 # 题目描述
 {% note success %}&emsp;&emsp;输入一棵二叉树，求该树的深度。从根结点到叶结点依次经过的结点（含根、叶结点）形成树的一条路径，最长路径的长度为树的深度。  {% endnote %}
@@ -10,6 +10,7 @@ categroies: 算法
 # 思路
 &emsp;&emsp;递归求解
 # 代码
+
 ```java
 /**
  * 输入一棵二叉树，求该树的深度。从根结点到叶结点依次经过的结点（含根、叶结点）形成树的一条路径，最长路径的长度为树的深度。
@@ -29,6 +30,7 @@ public class BinaryTreeDepth {
 	}
 }
 ```
+
 &emsp;下面是一个跟上面类似的题目。
 # 题目描述
 {% note success %}&emsp;&emsp;判断一棵树是不是平衡二叉树。平衡二叉树指左右子树的高度不超过1的二叉树。
