--- a/source/_posts/把数组排成最小的数.md
+++ b/source/_posts/把数组排成最小的数.md
@@ -2,7 +2,7 @@
 title: 把数组排成最小的数
 date: 2017-03-20 14:52:50
 tags: [算法]
-categroies: 算法
+categories: 算法
 ---
 # 题目描述
 &emsp;&emsp;输入一个正整数数组，把数组里所有数字拼接起来排成一个数，打印能拼接出的所有数字中最小的一个。例如输入数组{3，32，321}，则打印出这三个数字能排成的最小数字为321323。
