--- a/source/_posts/第一个只出现一次的字符.md
+++ b/source/_posts/第一个只出现一次的字符.md
@@ -2,13 +2,13 @@
 title: 第一个只出现一次的字符
 date: 2017-03-21 11:03:34
 tags: [算法]
-categroies: 算法
-description: 算法
+categories: 算法
 ---
 # 题目描述
-&emsp;&esmp;在一个字符串(1<=字符串长度<=10000，全部由大写字母组成)中找到第一个只出现一次的字符,并返回它的位置.
+&emsp;&emsp;在一个字符串(1<=字符串长度<=10000，全部由大写字母组成)中找到第一个只出现一次的字符,并返回它的位置.
+<!--more-->
 # 思路
-&esmp;&emsp;暴力求解。
+&emsp;&emsp;暴力求解。
 # 代码
 ```java
 /**
