--- a/source/_posts/二叉搜索树与双向链表.md
+++ b/source/_posts/二叉搜索树与双向链表.md
@@ -2,7 +2,7 @@
 title: 二叉搜索树与双向链表
 date: 2017-03-18 15:07:36
 tags: [算法]
-categroies: 算法
+categories: 算法
 ---
 # 题目描述
 &emsp;&emsp;输入一棵二叉搜索树，将该二叉搜索树转换成一个排序的双向链表。要求不能创建任何新的结点，只能调整树中结点指针的指向。
