--- a/source/_posts/二叉树中和为某一值的路径.md
+++ b/source/_posts/二叉树中和为某一值的路径.md
@@ -2,7 +2,7 @@
 title: 二叉树中和为某一值的路径
 date: 2017-03-18 14:17:10
 tags: [算法]
-categroies: 算法
+categories: 算法
 ---
 # 题目描述 #
 &emsp;&emsp;输入一颗二叉树和一个整数，打印出二叉树中结点值的和为输入整数的所有路径。路径定义为从树的根结点开始往下一直到叶结点所经过的结点形成一条路径。
