--- a/source/_posts/按字典序输出一个字符串的全排序.md
+++ b/source/_posts/按字典序输出一个字符串的全排序.md
@@ -2,7 +2,7 @@
 title: 按字典序输出一个字符串的全排序
 date: 2017-03-18 16:39:56
 tags: [算法]
-categroies: 算法
+categories: 算法
 ---
 # 题目描述
 &emsp;&emsp;输入一个字符串,按字典序打印出该字符串中字符的所有排列。例如输入字符串abc,则打印出由字符a,b,c所能排列出来的所有字符串abc,acb,bac,bca,cab和cba。
