--- a/source/_posts/如何终止一个线程.md
+++ b/source/_posts/如何终止一个线程.md
@@ -6,6 +6,7 @@ categories: java
 ---
 # JAVA如何让一个线程死亡或结束
 &emsp;&emsp;不推荐使用stop()方法终止线程。，因为stop()方法容易引起死锁。
+<!--more-->
 ```java
 1.	/**
 2.	 * JAVA里面如何使用一个线程死亡或结束 *
