--- a/source/_posts/栈与队列.md
+++ b/source/_posts/栈与队列.md
@@ -4,16 +4,14 @@ date: 2017-03-24 16:11:27
 tags: [算法,栈,队列]
 categories: 算法
 ---
-# 题目
-{% note success %}用两个栈来实现一个队列，完成队列的Push和Pop操作。 队列中的元素为int类型。{% endnote %}
+# 题目描述
+{% note success %}用两个栈来实现一个队列，完成队列的Push和Pop操作。 队列中的元素为int类型.{% endnote %}
 <!--more-->
 # 思路
-
 假设两个栈为A和B。
 1. 入队列的时候，只需要向A栈中入栈即可。
 2. 出队列的时候，要先检查B栈是否为空。如果B为空，把A栈中的元素全部放入B栈中。如果B不为空，就从B栈顶弹出一个元素。
 这样就实现了一个队列先进先出的功能。
-
 # 代码实现
 ```java
 /**
@@ -49,22 +47,19 @@ public class StackQueue {
 	}
 }
 ```
-
 # 题目描述
-{% note success %}用两个队列实现栈的功能.{% endnote %}
+用两个队列实现栈的功能。
 # 思路
-
- >把B当做一个中转站 
- 入栈：将元素进队列A
- 出栈：判断队列A中元素的个数是否为1，如果等于1，则出队列，否则将队列A中的元素出队列并放入队列B，直到队列A中的元素留下一个， 然后队列A出队列，
- 再把队列B中的元素出队列以此放入队列A中。
-
+把B当做一个中转站 
+入栈：将元素进队列A
+出栈：判断队列A中元素的个数是否为1，如果等于1，则出队列，否则将队列A中的元素出队列并放入队列B，直到队列A中的元素留下一个，然
+后队列A出队列，再把队列B中的元素出队列以此放入队列A中。
 # 代码
 ```java
 /**
  * 用两个队列实现栈的功能； 思路 <分析>：把B当做一个中转站 入栈：将元素进队列A
- * 出栈：判断队列A中元素的个数是否为1，如果等于1，则出队列，否则将队列A中的元素出队列并放入队列B，直到队列A中的元素留下一个， 然后队列A出队列，再把
- * 队列B中的元素出队列以此放入队列A中。
+ * 出栈：判断队列A中元素的个数是否为1，如果等于1，则出队列，否则将队列A中的元素出队列并放入队列B，直到队列A中的元素留下一
+ * 个，然后队列A出队列，再把 队列B中的元素出队列以此放入队列A中。
  * 
  * @author XIAO
  *
