--- a/source/_posts/回朔算法详解.md
+++ b/source/_posts/回朔算法详解.md
@@ -6,6 +6,7 @@ categories: 算法
 ---
 刷题的时候碰到一个很常见的算法-回溯法，看了一些博客，感觉这个讲得通俗易懂。转过来，后面有些自己的补充。
 &emsp;&emsp;回溯法（探索与回溯法）是一种选优搜索法，又称为试探法，按选优条件向前搜索，以达到目标。但当探索到某一步时，发现原先选择并不优或达不到目标，就退回一步重新选择，这种走不通就退回再走的技术为回溯法，而满足回溯条件的某个状态的点称为“回溯点”。
+<!--more-->
 首先我们来看一道题目：
 Combinations：Given two integers n and k,return all possible combinations of k numbersout of 1 ... n. For example, If n = 4 and k =2, a solution is:
  
@@ -45,7 +46,7 @@ public void backtracking(int n,int k,int start,List<Integer> list){
                 //（留白，有用=。=）  
             }  
         }  
-    }  
+}  
 ```
 观察一下上述代码，我们加入了一个start变量，它是i的起点。为什么要加入它呢？比如我们第一次加入了1，下一次搜索的时候还能再搜索1了么？肯定不可以啊！我们必须从他的下一个数字开始，也就是2 、3或者4啦。所以start就是一个开始标记这个很重要啦！
 这时候我们在主方法中加入backtracking(n,k,1,list);调试后发现答案不对啊！为什么我的答案比他长那么多？
@@ -115,7 +116,7 @@ backtracking(candidates,target-candidates[i],i,list);
 那么什么时候找到的解符合要求呢？自然是remain（注意区分初始的target）=0了，表示之前的组合恰好能凑出target。如果remain<0 表示凑的数太大了，组合不可行，要回退。当remain>0 说明凑的还不够，继续凑。
 所以完整方法如下：
 ```java
-publicclass Solution {  
+public class Solution {  
     List<List<Integer>> result=newArrayList<List<Integer>>();  
     public List<List<Integer>>combinationSum(int[] candidates, int target) {  
         Arrays.sort(candidates);//所给数组可能无序，排序保证解按照非递减组合  
